// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors bugs should works with empty path (not undefined) for first level reducer 1`] = `"firstLevel"`;

exports[`selectors should retrieve all data, validate (path, values), when not find value 1`] = `Array []`;

exports[`selectors should retrieve all data, validate (path, values), with simple path and multi value 1`] = `
Array [
  Object {
    "code": "elm1",
    "infos": "elm1",
    "some": "other",
  },
  Object {
    "code": "elm4",
    "infos": "elm4",
    "some": "other",
    "sub": Object {
      "subCode": "subelm4",
    },
  },
]
`;

exports[`selectors should retrieve all data, validate (path, values), with simple path and simple value 1`] = `
Array [
  Object {
    "code": "elm2",
    "infos": "elm2",
    "some": "other",
  },
]
`;

exports[`selectors should retrieve all data, validate (path, values), with sub path and multi value 1`] = `
Array [
  Object {
    "code": "elm4",
    "infos": "elm4",
    "some": "other",
    "sub": Object {
      "subCode": "subelm4",
    },
  },
  Object {
    "code": "elm5",
    "infos": "elm5",
    "some": "other",
    "sub": Object {
      "subCode": "subelm5",
    },
  },
]
`;

exports[`selectors should retrieve all data, validate (path, values), with sub path and simple value 1`] = `
Array [
  Object {
    "code": "elm4",
    "infos": "elm4",
    "some": "other",
    "sub": Object {
      "subCode": "subelm4",
    },
  },
]
`;

exports[`selectors should retrieve all data, validate (path, values), with wrong path 1`] = `Array []`;

exports[`selectors should retrieve all data, without key 1`] = `
Object {
  "elm1": Object {
    "code": "elm1",
    "infos": "elm1",
    "some": "other",
  },
  "elm2": Object {
    "code": "elm2",
    "infos": "elm2",
    "some": "other",
  },
  "elm3": Object {
    "code": "elm3",
    "infos": "elm3",
    "some": "other",
  },
  "elm4": Object {
    "code": "elm4",
    "infos": "elm4",
    "some": "other",
    "sub": Object {
      "subCode": "subelm4",
    },
  },
  "elm5": Object {
    "code": "elm5",
    "infos": "elm5",
    "some": "other",
    "sub": Object {
      "subCode": "subelm5",
    },
  },
}
`;

exports[`selectors should retrieve all data, without key to array 1`] = `
Array [
  Object {
    "code": "elm2",
    "infos": "elm2",
    "some": "other",
  },
  Object {
    "code": "elm1",
    "infos": "elm1",
    "some": "other",
  },
  Object {
    "code": "elm3",
    "infos": "elm3",
    "some": "other",
  },
  Object {
    "code": "elm4",
    "infos": "elm4",
    "some": "other",
    "sub": Object {
      "subCode": "subelm4",
    },
  },
  Object {
    "code": "elm5",
    "infos": "elm5",
    "some": "other",
    "sub": Object {
      "subCode": "subelm5",
    },
  },
]
`;

exports[`selectors should retrieve data by id, with a single key 1`] = `
Object {
  "code": "elm3",
  "infos": "elm3",
  "some": "other",
}
`;

exports[`selectors should retrieve data by ids, with an array of keys 1`] = `
Array [
  Object {
    "code": "elm1",
    "infos": "elm1",
    "some": "other",
  },
  Object {
    "code": "elm3",
    "infos": "elm3",
    "some": "other",
  },
]
`;

exports[`selectors should retrieve initialized value 1`] = `true`;

exports[`selectors should retrieve keys 1`] = `
Array [
  "elm2",
  "elm1",
  "elm3",
  "elm4",
  "elm5",
]
`;

exports[`selectors should retrieve length 1`] = `5`;

exports[`selectors should retrieve state 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "sub": Object {
        "subCode": "subelm4",
      },
    },
    Object {
      "code": "elm5",
      "infos": "elm5",
      "some": "other",
      "sub": Object {
        "subCode": "subelm5",
      },
    },
  ],
  "data": Object {
    "elm1": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    "elm2": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "elm3": Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    "elm4": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "sub": Object {
        "subCode": "subelm4",
      },
    },
    "elm5": Object {
      "code": "elm5",
      "infos": "elm5",
      "some": "other",
      "sub": Object {
        "subCode": "subelm5",
      },
    },
  },
  "initialized": true,
  "keys": Array [
    "elm2",
    "elm1",
    "elm3",
    "elm4",
    "elm5",
  ],
}
`;

exports[`selectors should retrieve state, without path set 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "sub": Object {
        "subCode": "subelm4",
      },
    },
    Object {
      "code": "elm5",
      "infos": "elm5",
      "some": "other",
      "sub": Object {
        "subCode": "subelm5",
      },
    },
  ],
  "data": Object {
    "elm1": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    "elm2": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "elm3": Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    "elm4": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "sub": Object {
        "subCode": "subelm4",
      },
    },
    "elm5": Object {
      "code": "elm5",
      "infos": "elm5",
      "some": "other",
      "sub": Object {
        "subCode": "subelm5",
      },
    },
  },
  "initialized": true,
  "keys": Array [
    "elm2",
    "elm1",
    "elm3",
    "elm4",
    "elm5",
  ],
}
`;
